--- a/app/views/organizations/adoptable_pets/index.html.erb
+++ b/app/views/organizations/adoptable_pets/index.html.erb
@@ -69,7 +69,7 @@
 
     <% if @pets.present? %>
       <div class="d-flex justify-content-center align-items-center mt-2">
-        <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
+        <%== @pagy.series_nav(:bootstrap) if @pagy.pages > 1 %>
       </div>
     <% else %>
       <%= render partial: "shared/empty_state", locals: { text: t(".empty_state") } %>
