--- a/app/views/organizations/staff/adopters/index.html.erb
+++ b/app/views/organizations/staff/adopters/index.html.erb
@@ -33,7 +33,7 @@
       </div>
     </div>
     <div class="d-flex justify-content-center align-items-center mt-2">
-      <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
+      <%== @pagy.series_nav(:bootstrap) if @pagy.pages > 1 %>
     </div>
     <div class="justify-content-md-between mb-4 mb-xl-0 gx-3">
       <!-- Table layout -->
@@ -46,7 +46,7 @@
       </div>
     </div>
     <div class="d-flex justify-content-center align-items-center mt-2">
-      <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
+      <%== @pagy.series_nav(:bootstrap) if @pagy.pages > 1 %>
     </div>
   <% end %>
 <% end %>
