--- a/app/views/organizations/staff/adoption_application_reviews/index.html.erb
+++ b/app/views/organizations/staff/adoption_application_reviews/index.html.erb
@@ -31,7 +31,7 @@
         </div>
 
         <div class="d-flex justify-content-center align-items-center mt-2">
-          <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
+          <%== @pagy.series_nav(:bootstrap) if @pagy.pages > 1 %>
         </div>
 
         <!-- Search Results -->
@@ -39,7 +39,7 @@
 
     </section>
     <div class="d-flex justify-content-center align-items-center mt-2">
-      <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
+      <%== @pagy.series_nav(:bootstrap) if @pagy.pages > 1 %>
     </div>
   <% end %>
 <% end %>
