--- a/app/views/organizations/staff/dashboard/_pets_with_incomplete_or_overdue_tasks.html.erb
+++ b/app/views/organizations/staff/dashboard/_pets_with_incomplete_or_overdue_tasks.html.erb
@@ -32,6 +32,6 @@
     </table>
   </div>
   <div class="d-flex justify-content-center align-items-center mt-2">
-    <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
+    <%== @pagy.series_nav(:bootstrap) if @pagy.pages > 1 %>
   </div>
 </turbo-frame>
