--- a/app/views/organizations/staff/default_pet_tasks/index.html.erb
+++ b/app/views/organizations/staff/default_pet_tasks/index.html.erb
@@ -39,7 +39,7 @@
   </section>
 
   <div class="d-flex justify-content-center align-items-center mt-2">
-    <%== pagy_bootstrap_nav(@pagy)  if @pagy.pages > 1 %>
+    <%== @pagy.series_nav(:bootstrap)  if @pagy.pages > 1 %>
   </div>
   <div class="justify-content-md-between mb-4 mb-xl-0 gx-3">
     <% if @default_pet_tasks.present? %>
@@ -54,7 +54,7 @@
     <% end %>
   </div>
     <div class="d-flex justify-content-center align-items-center mt-2">
-    <%== pagy_bootstrap_nav(@pagy)  if @pagy.pages > 1 %>
+    <%== @pagy.series_nav(:bootstrap)  if @pagy.pages > 1 %>
   </div>
   <% end %>
 <% end %>
