--- a/app/views/organizations/staff/manage_fosters/index.html.erb
+++ b/app/views/organizations/staff/manage_fosters/index.html.erb
@@ -49,7 +49,7 @@
           </div>
         </div>
         <div class="d-flex justify-content-center align-items-center mt-2">
-          <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
+          <%== @pagy.series_nav(:bootstrap) if @pagy.pages > 1 %>
         </div>
         <!-- Search Results -->
         <% if @foster_pets.present? %>
@@ -66,7 +66,7 @@
         <% end %>
     </section>
     <div class="d-flex justify-content-center align-items-center mt-2">
-      <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
+      <%== @pagy.series_nav(:bootstrap) if @pagy.pages > 1 %>
     </div>
   <% end %>
 <% end %>
