--- a/app/views/organizations/staff/pets/index.html.erb
+++ b/app/views/organizations/staff/pets/index.html.erb
@@ -55,7 +55,7 @@
       </div>
     </div>
     <div class="d-flex justify-content-center align-items-center mt-2">
-      <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
+      <%== @pagy.series_nav(:bootstrap) if @pagy.pages > 1 %>
     </div>
     <!-- row -->
     <div class="justify-content-md-between mb-4 mb-xl-0 gx-3">
@@ -73,7 +73,7 @@
       <% end %>
     </div>
     <div class="d-flex justify-content-center align-items-center mt-2">
-      <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
+      <%== @pagy.series_nav(:bootstrap) if @pagy.pages > 1 %>
     </div>
   <% end %>
 <% end %>
